@@ -6,7 +6,9 @@ Help: mfeisenstein(k,{CHI1},{CHI2}): create the Eisenstein
  E_k(CHI1,CHI2), where an omitted character is considered as trivial.
 Doc: create the Eisenstein series $E_k(\chi_1,\chi_2)$, where $k \geq 1$,
  $\chi_i$ are Dirichlet characters and an omitted character is considered as
- trivial.
+ trivial. This form belongs to ${\cal E}_k(\Gamma_0(N), \chi)$ with $\chi =
+ \chi_1\chi_2$ and $N$ is the product of the conductors of $\chi_1$ and
+ $\chi_2$.
  \bprog
  ? CHI = Mod(3,4);
  ? E = mfeisenstein(3, CHI);
@@ -24,3 +26,24 @@ Doc: create the Eisenstein series $E_k(\chi_1,\chi_2)$, where $k \geq 1$,
  $$E_k(q) = 1 - (2k/B_k)\sum_{n\geq 1} \sigma_{k-1}(n) q^n$$
  is the standard Eisenstein series. In other words it is normalized so that its
  linear coefficient is $1$.
+
+ \misctitle{Important note} This function is currently implemented only when
+ $\Q(\chi)$ is the field of definition of $E_k(\chi_1,\chi_2)$. If it is a
+ strict subfield, an error is raised:
+ \bprog
+ ? mfeisenstein(6, Mod(7,9), Mod(4,9));
+  ***   at top-level: mfeisenstein(6,Mod(7,9),Mod(4,9))
+  ***                 ^---------------------------------
+  *** mfeisenstein: sorry, mfeisenstein for these characters is not
+  *** yet implemented.
+ eprog\noindent The reason for this is that each modular form is attached
+ to a modular form space $M_k(\Gamma_0(N),\chi)$. This is a $\C$-vector
+ space but it allows a basis of forms defined over $\Q(\chi)$ and is only
+ implemented as a $\Q(\chi)$-vector space: there is
+ in general no mechanism to take linear combinations of forms in the space
+ with coefficients belonging to a larger field. (Due to their importance,
+ eigenforms are the single exception to this restriction; for an eigenform
+ $F$, $\Q(F)$ is built on top of $\Q(\chi)$.) When the property $\Q(\chi) =
+ \Q(E_k(\chi_1,\chi_2)$ does not hold, we cannot express $E$ as a
+ $\Q(\chi)$-linear combination of the basis forms and many operations will
+ fail. For this reason, the construction is currently disabled.
