@@ -61,6 +61,8 @@ BA  15- old gen_ZpM_Dixon renamed to gen_ZpM_Dixon_Wiedemann,
         new gen_ZpM_Dixon with simpler interface
     16- better formula for Catalan
 BA  17- QXQ_div_ratlift renamed to QXQ_div
+    18- disallow mfeisenstein(k,chi1,chi2) when Q(chi1 chi2) is not its field
+        of definition
 
   Added
      1- new GP function rootsof1
